--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <header>
   <app-header></app-header>
 </header>
-<router-outlet></router-outlet>
+<div class="content">
+  <router-outlet></router-outlet>
+</div>
+<footer>
+  <app-footer></app-footer>
+</footer>
