--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,16 @@
 <div class="header">
-  <p>Teste</p>
+  <div class="header__container">
+    <img 
+      src="../../../assets/images/Logo.svg" 
+      alt="Logo da Marca"
+      class="header__image"
+      [routerLink]="['/adote']"
+    >
+    <a 
+      class="header__ancora" 
+      [routerLink]="['/regras']"
+    >Nossas Regras
+    </a>
+    <img class="header__menu" src="../../../assets/images/Group.svg">
+  </div>
 </div>
